/*
 *
 *  Copyright 2018 Expedia, Inc.
 *
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 *
 */

syntax = "proto3";

option java_package = "com.expedia.open.tracing.api.anomaly";
option java_multiple_files = true;
option go_package = "haystack";


message SearchAnamoliesRequest {
    map<string, string> labels  = 1;
    int64 startTime             = 2;
    int64 endTime               = 3;
    int32 size                  = 4;
}

message Anomaly {
    double expectedValue = 1;
    double observedValue = 2;
    int64 timestamp     = 3;
}

message SearchAnamolyResponse {
    string name                 = 1;
    map<string, string> labels  = 2;
    repeated Anomaly anomalies       = 3;
}

message SearchAnomaliesResponse {
    repeated SearchAnamolyResponse searchAnomalyResponse = 1;
}


service AnomalyReader {
    rpc getAnomalies(SearchAnamoliesRequest) returns (SearchAnomaliesResponse);  // fetches the anomalies
}
